# eguiplotlib

./: .gitignore  Cargo.toml  README.md  eguiplotlib.pyi  mystubgen.py  pyproject.toml  test.py
src/: lib.rs  run_native.rs
testing/: test.py
