[package]
name = "pyegui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
egui = "0.27"
egui_glow = { version = "0.27.2", default-features = false, optional = true, features = [
  "winit",
] }
glow = { version = "0.13", optional = true }
glutin-winit = { version = "0.4", optional = true }
glutin = { version = "0.31", optional = true }
pyo3 = { version = "0.21.2", features = ["experimental-declarative-modules"] }
rwh_05 = { package = "raw-window-handle", version = "0.5.2", optional = true, features = [
  "std",
] }
egui-winit = { version = "0.27.2", default-features = false }

[dependencies.winit]
default-features = false
features = ["wayland"]
version = "0.30"

[features]
default = ["glow"]

glow = [
  "dep:egui_glow",
  "dep:glow",
  "dep:glutin-winit",
  "dep:glutin",
  "dep:rwh_05",
  "winit/rwh_05",
]
