[package]
name = "pyegui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["experimental-declarative-modules"] }
egui = "0.27"
egui_sdl2_gl = { version = "0.27.0", features = ["use_epi"] }
ahash = "~0.8"
gl = "~0.14"
sdl2 = { version = "~0.36" }
memoffset = "0.9.0"
epi = "0.17"
egui_plot = "0.27.2"
